@@ -5,6 +5,7 @@
 		<file>fileOpen.png</file>
 		<file>fileSave.png</file>
 		<file>formAccept.png</file>
+		<file>formCreate.png</file>
 		<file>formOpen.png</file>
 		<file>formReject.png</file>
 		<file>formRemove.png</file>
