@@ -186,6 +186,19 @@
             </property>
            </widget>
           </item>
+          <item row="0" column="2" rowspan="6">
+           <spacer>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>0</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
           <item row="1" column="0" colspan="2" >
            <widget class="QCheckBox" name="ConfirmRemoveCheckBox" >
             <property name="font" >
@@ -223,19 +236,6 @@
              <string>Alt+P</string>
             </property>
            </widget>
-          </item>
-          <item row="0" column="2" rowspan="5">
-           <spacer>
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>0</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
           </item>
           <item row="3" column="0">
            <widget class="QLabel" name="MaxRecentFilesTextLabel">
@@ -276,6 +276,47 @@
            </widget>
           </item>
           <item row="4" column="0">
+           <widget class="QLabel" name="RandomizePerctTextLabel">
+            <property name="font">
+             <font>
+              <weight>50</weight>
+              <bold>false</bold>
+             </font>
+            </property>
+            <property name="text">
+             <string>&amp;Randomize factor:</string>
+            </property>
+            <property name="buddy">
+             <cstring>RandomizePerctSpinBox</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QSpinBox" name="RandomizePerctSpinBox">
+            <property name="font">
+             <font>
+              <weight>50</weight>
+              <bold>false</bold>
+             </font>
+            </property>
+            <property name="toolTip">
+             <string>Randomizer deviation from current value</string>
+            </property>
+            <property name="suffix" >
+             <string> %</string>
+            </property>
+            <property name="minimum">
+             <number>1</number>
+            </property>
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="value">
+             <number>100</number>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="0">
            <widget class="QLabel" name="BaseFontSizeTextLabel">
             <property name="font">
              <font>
@@ -291,7 +332,7 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="1">
+          <item row="5" column="1">
            <widget class="QComboBox" name="BaseFontSizeComboBox">
             <property name="font">
              <font>
@@ -419,6 +460,7 @@
   <tabstop>ConfirmRemoveCheckBox</tabstop>
   <tabstop>CompletePathCheckBox</tabstop>
   <tabstop>MaxRecentFilesSpinBox</tabstop>
+  <tabstop>RandomizePerctSpinBox</tabstop>
   <tabstop>BaseFontSizeComboBox</tabstop>
   <tabstop>OkPushButton</tabstop>
   <tabstop>CancelPushButton</tabstop>
